apps/wacdemo-ambulance-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wacdemo-ambulance-webapi
spec:
  parentRefs:
    - name: wac-hospital-gateway
    - name: wac-hospital-gateway
      namespace: wac-hospital-system
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /wacdemo-api
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /api
    backendRefs:
      - group: ""
        kind: Service
        name: wacdemo-ambulance-webapi
        port: 80
  - matches:
      - path:
          type: PathPrefix
          value: /wacdemo-openapi-ui
    backendRefs:
      - group: ""
        kind: Service
        name: wacdemo-openapi-ui
        port: 80
  - matches:
      - path:
          type: Exact
          value: /wacdemo-openapi
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /openapi
    backendRefs:
      - group: ""
        kind: Service
        name: wacdemo-ambulance-webapi
        port: 80
